# FinancePulse

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 20260308000001_create_users.sql  20260308000002_create_portfolios.sql  20260308000003_create_holdings.sql  20260308000004_create_alerts.sql  20260308000005_create_price_history.sql  20260308000006_create_watchlists.sql  20260319000001_expand_asset_types.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/indicators/: mod.rs  tests.rs
backend/src/ingestion/: coinbase.rs  coingecko.rs  finnhub.rs  mod.rs  polymarket.rs  yahoo.rs
backend/src/models/: alert.rs  holding.rs  mod.rs  portfolio.rs  price.rs  user.rs  watchlist.rs
backend/src/routes/: alerts.rs  auth.rs  market.rs  mod.rs  portfolio.rs  watchlists.rs
backend/src/tasks/: alert_checker.rs  mod.rs
backend/src/ws/: broadcast.rs  server.rs
docs/: SCREENSHOTS.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: page.tsx  (+1 more)
frontend/src/components/: providers.tsx
frontend/src/hooks/: useAuth.ts  useKeyboardShortcuts.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: authStore.ts  priceStore.ts  uiStore.ts
frontend/src/types/: index.ts
scripts/: deploy.sh  setup.sh  test_ws.sh
(+33 files in other folders)
