[package]
name = "financepulse-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "financepulse"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
fred = { version = "10", features = ["subscriber-client"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
thiserror = "2"
tower = "0.5"
regex = "1"
futures-util = "0.3"
